# linkml-project-copier

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CONTRIBUTING.md  README.md  copier.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codespell.yml  test-template.yml  typos.yml
template/: .pre-commit-config.yaml  Makefile.jinja  README.md.jinja  config.public.mk.jinja  justfile  mkdocs.yml.jinja  pyproject.toml.jinja
template/.github/workflows/: deploy-docs.yaml  main.yaml  main.yaml.jinja  {% if gh_action_docs_preview %}test_pages_build.yaml{% endif %}.jinja  {% if gh_action_pypi %}pypi-publish.yaml{% endif %}.jinja
template/src/{{project_slug}}/: __init__.py.jinja
template/src/{{project_slug}}/datamodel/: __init__.py.jinja
template/src/{{project_slug}}/schema/: {% if add_example %}{{ project_slug }}.yaml{% endif %}.jinja
template/tests/: {% if add_example %}test_data.py{% endif %}.jinja
tests/: conftest.py  helpers.py  test_generation.py  test_integration.py  test_licenses.py  test_options.py
